// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormGroup should match snapshot 1`] = `
<div
  className="form-group"
/>
`;

exports[`FormGroup should take regular element attributes 1`] = `
<div
  className="form-group my-class"
/>
`;

exports[`FormGroup should use a block prop (boolean) as a class name 1`] = `
<div
  className="form-group block"
/>
`;

exports[`FormGroup should use a noLabel prop (boolean) as a class name 1`] = `
<div
  className="form-group no-label"
/>
`;
